correct IP addr family
