# pkg/api/common/ip-transport.pb.go
@@ -21,53 +21,53 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
-// IP version
-type IPv int32
+// IP Anddress family
+type IpAddrFamily int32
 
 const (
-	IPv__  IPv = 0
-	IPv_V4 IPv = 1 //IPv4
-	IPv_V6 IPv = 2 //IPv6
+	IpAddrFamily__    IpAddrFamily = 0
+	IpAddrFamily_IPv4 IpAddrFamily = 1 //IPv4
+	IpAddrFamily_IPv6 IpAddrFamily = 2 //IPv6
 )
 
-// Enum value maps for IPv.
+// Enum value maps for IpAddrFamily.
 var (
-	IPv_name = map[int32]string{
+	IpAddrFamily_name = map[int32]string{
 		0: "_",
-		1: "V4",
-		2: "V6",
+		1: "IPv4",
+		2: "IPv6",
 	}
-	IPv_value = map[string]int32{
-		"_":  0,
-		"V4": 1,
-		"V6": 2,
+	IpAddrFamily_value = map[string]int32{
+		"_":    0,
+		"IPv4": 1,
+		"IPv6": 2,
 	}
 )
 
-func (x IPv) Enum() *IPv {
-	p := new(IPv)
+func (x IpAddrFamily) Enum() *IpAddrFamily {
+	p := new(IpAddrFamily)
 	*p = x
 	return p
 }
 
-func (x IPv) String() string {
+func (x IpAddrFamily) String() string {
 	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
 }
 
-func (IPv) Descriptor() protoreflect.EnumDescriptor {
+func (IpAddrFamily) Descriptor() protoreflect.EnumDescriptor {
 	return file_common_ip_transport_proto_enumTypes[0].Descriptor()
 }
 
-func (IPv) Type() protoreflect.EnumType {
+func (IpAddrFamily) Type() protoreflect.EnumType {
 	return &file_common_ip_transport_proto_enumTypes[0]
 }
 
-func (x IPv) Number() protoreflect.EnumNumber {
+func (x IpAddrFamily) Number() protoreflect.EnumNumber {
 	return protoreflect.EnumNumber(x)
 }
 
-// Deprecated: Use IPv.Descriptor instead.
-func (IPv) EnumDescriptor() ([]byte, []int) {
+// Deprecated: Use IpAddrFamily.Descriptor instead.
+func (IpAddrFamily) EnumDescriptor() ([]byte, []int) {
 	return file_common_ip_transport_proto_rawDescGZIP(), []int{0}
 }
 
@@ -163,8 +163,8 @@ type ICMP struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	IPv   IPv      `protobuf:"varint,1,opt,name=IPv,proto3,enum=common.IPv" json:"IPv,omitempty"`
-	Types []uint32 `protobuf:"varint,2,rep,packed,name=Types,proto3" json:"Types,omitempty"` // ICMP message types
+	IPv   IpAddrFamily `protobuf:"varint,1,opt,name=IPv,proto3,enum=common.IpAddrFamily" json:"IPv,omitempty"`
+	Types []uint32     `protobuf:"varint,2,rep,packed,name=Types,proto3" json:"Types,omitempty"` // ICMP message types
 }
 
 func (x *ICMP) Reset() {
@@ -199,11 +199,11 @@ func (*ICMP) Descriptor() ([]byte, []int) {
 	return file_common_ip_transport_proto_rawDescGZIP(), []int{1}
 }
 
-func (x *ICMP) GetIPv() IPv {
+func (x *ICMP) GetIPv() IpAddrFamily {
 	if x != nil {
 		return x.IPv
 	}
-	return IPv__
+	return IpAddrFamily__
 }
 
 func (x *ICMP) GetTypes() []uint32 {
@@ -334,17 +334,18 @@ var file_common_ip_transport_proto_rawDesc = []byte{
 	0x72, 0x6f, 0x6d, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x04, 0x66, 0x72, 0x6f, 0x6d, 0x12,
 	0x0e, 0x0a, 0x02, 0x74, 0x6f, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x02, 0x74, 0x6f, 0x22,
 	0x1d, 0x0a, 0x09, 0x54, 0x72, 0x61, 0x6e, 0x73, 0x70, 0x6f, 0x72, 0x74, 0x12, 0x07, 0x0a, 0x03,
-	0x54, 0x43, 0x50, 0x10, 0x00, 0x12, 0x07, 0x0a, 0x03, 0x55, 0x44, 0x50, 0x10, 0x01, 0x22, 0x3b,
-	0x0a, 0x04, 0x49, 0x43, 0x4d, 0x50, 0x12, 0x1d, 0x0a, 0x03, 0x49, 0x50, 0x76, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x0e, 0x32, 0x0b, 0x2e, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x2e, 0x49, 0x50, 0x76,
-	0x52, 0x03, 0x49, 0x50, 0x76, 0x12, 0x14, 0x0a, 0x05, 0x54, 0x79, 0x70, 0x65, 0x73, 0x18, 0x02,
-	0x20, 0x03, 0x28, 0x0d, 0x52, 0x05, 0x54, 0x79, 0x70, 0x65, 0x73, 0x2a, 0x1c, 0x0a, 0x03, 0x49,
-	0x50, 0x76, 0x12, 0x05, 0x0a, 0x01, 0x5f, 0x10, 0x00, 0x12, 0x06, 0x0a, 0x02, 0x56, 0x34, 0x10,
-	0x01, 0x12, 0x06, 0x0a, 0x02, 0x56, 0x36, 0x10, 0x02, 0x42, 0x2e, 0x5a, 0x2c, 0x67, 0x69, 0x74,
-	0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x48, 0x2d, 0x42, 0x46, 0x2f, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x73, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x63, 0x6f, 0x6d, 0x6d,
-	0x6f, 0x6e, 0x3b, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x33,
+	0x54, 0x43, 0x50, 0x10, 0x00, 0x12, 0x07, 0x0a, 0x03, 0x55, 0x44, 0x50, 0x10, 0x01, 0x22, 0x44,
+	0x0a, 0x04, 0x49, 0x43, 0x4d, 0x50, 0x12, 0x26, 0x0a, 0x03, 0x49, 0x50, 0x76, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x0e, 0x32, 0x14, 0x2e, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x2e, 0x49, 0x70, 0x41,
+	0x64, 0x64, 0x72, 0x46, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x52, 0x03, 0x49, 0x50, 0x76, 0x12, 0x14,
+	0x0a, 0x05, 0x54, 0x79, 0x70, 0x65, 0x73, 0x18, 0x02, 0x20, 0x03, 0x28, 0x0d, 0x52, 0x05, 0x54,
+	0x79, 0x70, 0x65, 0x73, 0x2a, 0x29, 0x0a, 0x0c, 0x49, 0x70, 0x41, 0x64, 0x64, 0x72, 0x46, 0x61,
+	0x6d, 0x69, 0x6c, 0x79, 0x12, 0x05, 0x0a, 0x01, 0x5f, 0x10, 0x00, 0x12, 0x08, 0x0a, 0x04, 0x49,
+	0x50, 0x76, 0x34, 0x10, 0x01, 0x12, 0x08, 0x0a, 0x04, 0x49, 0x50, 0x76, 0x36, 0x10, 0x02, 0x42,
+	0x2e, 0x5a, 0x2c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x48, 0x2d,
+	0x42, 0x46, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x73, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70,
+	0x69, 0x2f, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x3b, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -362,7 +363,7 @@ func file_common_ip_transport_proto_rawDescGZIP() []byte {
 var file_common_ip_transport_proto_enumTypes = make([]protoimpl.EnumInfo, 2)
 var file_common_ip_transport_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_common_ip_transport_proto_goTypes = []interface{}{
-	(IPv)(0),                         // 0: common.IPv
+	(IpAddrFamily)(0),                // 0: common.IpAddrFamily
 	(Networks_NetIP_Transport)(0),    // 1: common.Networks.NetIP.Transport
 	(*Networks)(nil),                 // 2: common.Networks
 	(*ICMP)(nil),                     // 3: common.ICMP
@@ -370,7 +371,7 @@ var file_common_ip_transport_proto_goTypes = []interface{}{
 	(*Networks_NetIP_PortRange)(nil), // 5: common.Networks.NetIP.PortRange
 }
 var file_common_ip_transport_proto_depIdxs = []int32{
-	0, // 0: common.ICMP.IPv:type_name -> common.IPv
+	0, // 0: common.ICMP.IPv:type_name -> common.IpAddrFamily
 	1, // [1:1] is the sub-list for method output_type
 	1, // [1:1] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
